# coursework6

./: .gitignore  README.md  pyproject.toml  requirements.txt
ads/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_advertisement_image.py  0003_rename_advertisement_ad.py  0004_alter_ad_image.py  0005_comment.py  0006_alter_comment_options.py
fixtures/: users.json
front_source/market_postgres/: docker-compose.yaml  nginx.conf
project/: settings.py  urls.py
tests/: conftest.py  factories.py  fixtures.py
tests/advertisements_tests/: ads_me_test.py  create_advertisement_test.py  destroy_advertisement_test.py  list_advertisement_test.py  retrieve_advertisement_test.py  update_advertisement_test.py
tests/comments_tests/: create_comment_test.py  destroy_comment_test.py  list_comments_test.py  retrieve_comments_test.py  update_comment_test.py
tests/users_tests/: create_user_test.py  list_users_test.py  retrieve_user_test.py  update_user_test.py  users_me_test.py
users/: manager.py  models.py  serializers.py  urls.py
users/management/commands/: loadall.py
users/migrations/: 0001_initial.py  0002_alter_user_role_alter_user_username.py  0003_remove_user_date_joined_remove_user_groups_and_more.py  0004_alter_user_options_remove_user_username.py  0005_user_is_active.py  0006_alter_user_phone.py
