[tool.poetry]
name = "cw_6"
version = "0.1.0"
description = ""
authors = ["emotzart <johnshuabratsk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
