[tool.poetry]
name = "cw_6"
version = "0.1.0"
description = ""
authors = ["emotzart <johnshuabratsk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.4"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
Pillow = "^9.3.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "4.8.0"
djoser = "^2.1.0"
django-filter = "^22.1"
drf-spectacular = "^0.25.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
